[tool.poetry]
name = "ecs-tool"
version = "0.1.0"
description = "Wrapper on top of \"aws ecs\" that tries to improve user experience"
authors = ["Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/whisller/ecs-tool"
repository = "https://github.com/whisller/ecs-tool"
classifiers = [
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["aws", "ecs", "cli"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
