[tool.poetry]
name = "ecs-tool"
version = "0.0.2"
description = "CLI wrapper on top of \"aws ecs\" that tries to improve user experience"
authors = ["Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/whisller/ecs-tool"
repository = "https://github.com/whisller/ecs-tool"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["aws", "ecs", "cli"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
boto3 = "^1.9"
terminaltables = "^3.1"
colorclass = "^2.2"

[tool.poetry.dev-dependencies]
black = "=19.3b0"

[tool.poetry.scripts]
ecs = "ecs_tool.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
